<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Rules ands Guidlines"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/rule_1_heading"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18dp"

                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/rule_1_content"
                android:textColor="@color/black"

                android:textSize="14dp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/rule_2_heading"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18dp"

                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:text="@string/rule_2_content"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="normal" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/rule_3_heading"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18dp"

                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:text="@string/rule_3_content"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="normal" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/rule_4_heading"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18dp"

                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:text="@string/rule_4_content"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="normal" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/rule_5_heading"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18dp"

                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:text="@string/rule_5_content"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:text="@string/rule_disclaimer"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="normal" />


        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>